--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class = "flex">
       <h2>Deixe seu comentário!</h2>
 
-      <form class="flex" action="/listar">
+      <form class="flex" id="form"> 
         <input type="text" name="field1" id="field1" placeholder="Título">
         <input type="text" name="field2" id="field2" placeholder="Descrição">
         <input type="text" name="field3" id="field3" placeholder="URL da sua fotinha">
@@ -29,7 +29,7 @@
           <label for="periodo">Período da visita:</label>
           <input type="radio" name="periodo" value="manha" >manhã</input>
           <input type="radio" name="periodo" value="tarde" >tarde</input>
-          <input type="radio" name="periodo" value="noite" checked>noite</input>
+          <input type="radio" name="periodo" value="noite"checked>noite</input>
         </section>
         
         <div>
@@ -45,7 +45,7 @@
   </main>
   
 
-  <script src="/Checkpoint1/js/script.js"></script>
+  <script src="./js/script.js"></script> <!-- -->
 
 </body>
 </html>
